syntax = "proto3";
package manageusers;

service ManageUsers {
  rpc CreateUser(CreateUserParams) returns (User) {}
  rpc ListUsers(EmptyParams) returns (stream User) {}
}

message CreateUserParams {
  string email = 1;
}

message EmptyParams {}

message User {
  string email = 1;
  string id = 2;
}

enum ListSubject {
  USERS = 0;
  GROUPS = 1;
}

message ListParams {
  ListSubject subject = 1;
}
